--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
 	background-image: url(img/bgzapatillas.jpg);
 	margin: 20px auto;
 	overflow-x: hidden;
+
 }
 
 main{
@@ -128,6 +129,11 @@ nav{
 	background-color: #f0cf93
 
 }
+
+.bg-black{
+	background-color: black;
+}
+
 .bg-degrade{
 	background: linear-gradient(to top, #D68A31, #f0cf93 );
 	opacity: 0.9
@@ -164,6 +170,8 @@ nav{
 	top: 0;
 	left: 0;
 	z-index: 100;
+	background-color: rgba(236, 216, 179, 0.85);
+	padding: 5px 25px
 
 }
 
@@ -283,6 +291,9 @@ nav{
 	align-self: center;
 }
 
-
-
+.botonera{
+	background-color: : #5B5959;
 }
+
+
+
